k8s/infra/databases/elasticsearch/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: cwx
spec:
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: harbor.chenwx.top/docker.io/elasticsearch:8.19.14
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            memory: "3Gi"
          limits:
            memory: "3Gi"

        ports:
        - containerPort: 9200
          name: elasticsearch

        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
          subPath: elasticsearch_esdata01

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cwx-nfs-k8s
