k8s/infra/databases/elasticsearch/service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: cwx
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
  - port: 9200
    name: elasticsearch
    targetPort: 9200
