k8s/infra/databases/elasticsearch/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`elasticsearch.chenwx.top`)
      kind: Rule
      services:
        - name: elasticsearch
          namespace: cwx
          port: 9200
